Fix 'block configuration actions menu does not contrast enough', ref: https://moodle.org/mod/forum/discuss.php?d=427627.

--- a/scss/settings/adaptable.scss
+++ b/scss/settings/adaptable.scss
@@ -2076,47 +2076,6 @@ img.smallicon {
     min-width: 0;
 }
 
-// Block action classes lifted from previously used bootstrapbase parent theme.
-.block.hidden .header .block_action .block-hider-hide {
-    display: none;
-}
-.block.hidden .header .block_action .block-hider-show {
-    display: inline;
-}
-
-.block .header .block_action {
-    float: right;
-    padding: 3px 2px;
-}
-
-.block .header .block_action > {
-    margin-left: 3px;
-}
-
-.block .header .block_action .block-hider-show,
-.block .header .block_action .block-hider-hide {
-    cursor: pointer;
-}
-
-.block .header .block_action .block-hider-show {
-    display: none;
-}
-
-.jsenabled .block.hidden .content {
-    display: none;
-    opacity: 0;
-}
-
-.jsenabled .block .content {
-    opacity: 1;
-    display: block;
-    -webkit-transition: ease [[setting:navbardropdowntransitiontime]];
-    -moz-transition: ease [[setting:navbardropdowntransitiontime]];
-    -ms-transition: ease [[setting:navbardropdowntransitiontime]];
-    -o-transition: ease [[setting:navbardropdowntransitiontime]];
-    transition: ease [[setting:navbardropdowntransitiontime]];
-}
-
 // Transform default value text in settings to Italic.
 .form-item .form-setting .form-defaultinfo {
     font-style: italic;
